manifests/observabilidad/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observabilidad
  labels:
    app.kubernetes.io/managed-by: argocd
